tests/files/type_checker_tests/should_pass/093.cmdr
//Test set operation type checks
a = 1;
x = [2.0];
x[a] = 3.1;
